--- a/config/baseline.yaml
+++ b/config/baseline.yaml
@@ -1,5 +1,13 @@
 model:
   name: "baseline_model"
+  type: "custom"
+  layers:
+    - linear: [512, 256]
+    - activation: "relu"
+    - linear: [256, 128]
+    - activation: "relu"
+    - linear: [128, 360] #because 360 classes since we predict the angle in degrees
+
 
 training:
   epochs: 10
