added flatten to network structure

--- a/config/baseline.yaml
+++ b/config/baseline.yaml
@@ -5,6 +5,7 @@ model:
   name: "baseline_model"
   type: "custom"
   layers:
+    - flatten: true
     - linear: [512, 256]
     - activation: "relu"
     - linear: [256, 128]
