--- a/config/translation_cifar/translation_cifar_transformer1.yaml
+++ b/config/translation_cifar/translation_cifar_transformer1.yaml
@@ -12,7 +12,9 @@ model:
   depth: 4
   number_heads: 8
   mlp_ratio: 4.0
-  dropout_rate: 0.1
+  dropout: 0.1
+  activation: "relu" #activation function for the transformer
+  unit_norm: True #whether to use unit norm in the transformer layers
   #general stuff
   task: "regression"
   use_sincos_encoding: true
