added unit norm parameter

--- a/config/translation_cifar/translation_cifar_resnet1.yaml
+++ b/config/translation_cifar/translation_cifar_resnet1.yaml
@@ -11,6 +11,7 @@ model:
   num_classes: 2 #we predict 2 values - sine and cosine of the angle - we have 2 output categories
   channels: [64, 128, 256, 512] #number of channels in each layer
   dropout: 0.1 
+  unit_norm: True
   #general stuff
   task: "regression"
   use_sincos_encoding: true
