--- a/config/translation_cifar/translation_cifar_resnet1.yaml
+++ b/config/translation_cifar/translation_cifar_resnet1.yaml
@@ -2,15 +2,10 @@ experiment_name: "resnet1"
 project_name : "translation_and_rotation_cifar"
 
 model:
-  name: "resnet1
+  name: "resnet1"
   type: "resnet"
   #stuff specific to resnet
-  input_shape:
-  block_type: "basic" #using basic block for resnet
-  num_blocks: [2, 2, 2, 2] #number of blocks in each layer
   num_classes: 2 #we predict 2 values - sine and cosine of the angle - we have 2 output categories
-  channels: [64, 128, 256, 512] #number of channels in each layer
-  dropout: 0.1 
   unit_norm: True
   #general stuff
   task: "regression"
