--- a/config/translation_cifar/translation_cifar_resnet1.yaml
+++ b/config/translation_cifar/translation_cifar_resnet1.yaml
@@ -7,6 +7,7 @@ model:
   #stuff specific to resnet
   num_classes: 2 #we predict 2 values - sine and cosine of the angle - we have 2 output categories
   unit_norm: True
+  resnet_type: 18
   #general stuff
   task: "regression"
   use_sincos_encoding: true
