--- a/config/translation_cifar/translation_cifar_resnet2.yaml
+++ b/config/translation_cifar/translation_cifar_resnet2.yaml
@@ -19,3 +19,4 @@ training:
   learning_rate: 0.001
   loss: "angular" #using the angular loss function to take into account the circular nature of the data
   optimizer: "adam"
+  save: True #whether we want to save the model after training
